[metadata]
name = deephaven-plugin
description = Deephaven Plugin interface
long_description = file: README.md
long_description_content_type = text/markdown
version = attr:deephaven.plugin.__version__
url = https://github.com/deephaven/deephaven-plugin
project_urls =
    Source Code = https://github.com/deephaven/deephaven-plugin
    Bug Tracker = https://github.com/deephaven/deephaven-plugin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Development Status :: 3 - Alpha
keywords = deephaven, plugin
author = Devin Smith
author_email = devinsmith@deephaven.io
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    importlib-metadata>=3.6;python_version<'3.8'

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    deephaven-plugin-list-registrations = deephaven.plugin:list_registrations_console
    deephaven-plugin-list-plugins = deephaven.plugin:list_plugins_console
